--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-
+<!-- Home Page - used in testing -->
 <main>
   <table class="board">
     <!-- ultimately, you'll write the JS to make a dynamic board ---
